--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,14 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-if (CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
-    set(CMAKE_EXE_LINKER_FLAGS "--static -lpthread")
+if (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
+    set(CMAKE_CXX_FLAGS "-ldl -lpthread")
 endif ()
+
+
+if (CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
+    set(CMAKE_CXX_FLAGS "-static -lpthread")
+endif ()
+
 
 add_executable(rex exec/main.cpp ${REX_SRC})
