Add default modules path to `importPrefixPath`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ file(GLOB REX_SRC
         interpreter/*.cpp
         pass/*.cpp
         share/*.cpp
+        share/whereami/*.cpp
         exceptions/*.cpp
         ffi/*.cpp
         *.cpp)
