--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -73,3 +73,20 @@ jobs:
         with:
           name: macos-amd64-build
           path: ${{github.workspace}}/cmake-build-release
+
+  build-docs:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure doxygen
+        run: brew install doxygen graphviz; mkdir doxygen
+
+      - name: Build
+        run: doxygen ./Doxyfile
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.0
+        with:
+          name: docs
+          path: ${{github.workspace}}/doxygen
