Bugfix: fixed compiling fail

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,14 +17,10 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
+add_executable(rex exec/main.cpp ${REX_SRC})
+
 if (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
-    set(CMAKE_CXX_FLAGS "-ldl -lpthread")
-endif ()
-
-
-if (CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
+    TARGET_LINK_LIBRARIES(std ${CMAKE_DL_LIBS} pthread)
+elseif (CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
     set(CMAKE_CXX_FLAGS "-static -lpthread")
 endif ()
-
-
-add_executable(rex exec/main.cpp ${REX_SRC})
